   to maintain it further. It also induces a lot of XBT code (for
   portability sake), that must be maintained too.
 * For all these reasons, we killed GRAS. If someone wants to revive it
   in the future, don't cry, our git history still remembers of GRAS.

 SMPI:
 * Now works on Windows too!
 * Much more extensive test suite, from MPICH

 MSG:
 * New function: MSG_process_get_number()

 SURF:
 * Change the default value of the TCP_gamma constant (maximal size of TCP
   congestion window) to a more realistic 4MiB value. If you notice changes in
   your simulation results, you can fall back to the previous 20k tiny window
   by adding --cfg=network/TCP_gamma:20000 on command line.
 * Bug fix about the way periodic availability/state traces are handled.
 * Bug fix: use default values at start when first event in availability/state 
   trace is not at time 0.

 XBT:
 * Kill synchronized dynars, and xbt_dynar_dopar(). We cannot think of a
   usecase where it's really mandatory, and maintaining it was a pain in
   our codebase.
 * New: xbt_fifo_search(), search an item with a user-provided
   comparison function instead of dumb pointer comparison.

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.8.1) stable; urgency=low

 The "we are told that some people want to also *install* the simgrid
 framework" release.

 * Add missing file "tesh.1" to the archive.

 -- Sat Oct 27 16:12:11 CEST 2012 Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.8) stable; urgency=low

 The Psssshiiiit release: SimGrid jumps into the Cloud.

 MSG:
 * Add an experimental interface to manipulate VMs. They are mainly
   process groups with very few intrinsic semantic, but they should
   allow you to build the semantic you want easily.
 * New function: MSG_host_set_property_value()
 * New function: MSG_process_on_exit(). To clean memory in all cases.
 * Bug fixes that made the host (and link) failures unusable.